Fix monitor name cropping in nested groups (#5981)
Add text-overflow: ellipsis to .info class to prevent monitor names from being completely cropped in nested groups.

Fixes #5981

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -482,6 +482,7 @@ optgroup {
         .info {
             white-space: nowrap;
             overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         &:hover {
